Added support for haas-proxy version

--- a/arm/Dockerfile
+++ b/arm/Dockerfile
@@ -2,9 +2,14 @@ FROM arm32v7/python:3
 
 MAINTAINER Ondřej Zráuba <info@zaruba-ondrej.cz> (https://zaruba-ondrej.cz)
 
+
+
 RUN apt-get update && \
-	apt-get install -y sshpass && \
-	pip3 install haas-proxy
+	apt-get install -y sshpass
+
+ENV HAAS_PROXY_VERSION 1.2
+
+RUN pip3 install haas-proxy==${HAAS_PROXY_VERSION}
 
 COPY startup.sh /bin/startup.sh
 
