--- a/standard/Dockerfile
+++ b/standard/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3
 
-MAINTAINER Ondřej Zráuba <info@zaruba-ondrej.cz> (https://zaruba-ondrej.cz)
+MAINTAINER Ondřej Záruba <info@zaruba-ondrej.cz> (https://zaruba-ondrej.cz)
 
 RUN apt-get update && \
 	apt-get install -y sshpass
